# rust_pico2w_template

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
src/: logger.rs  main.rs  usb_logger.rs
